--- a/style.css
+++ b/style.css
@@ -15,9 +15,18 @@ h4{
     color: khaki;
 }
 
-.classes{
+.galeria{
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: space-between;
+}
+
+.galeria-item{
+    background-color: beige;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding: 10px;
+
+    text-align: center;
 }
