Finalizado estilização básica

--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ body{
     color: navajowhite; /*cor do texto*/
 }
 
+.galeria {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-between;
+}
+
 h1{
     color: bisque;
     text-align: center;
@@ -27,6 +34,24 @@ h4{
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     padding: 10px;
-
+    flex: 1 1 calc(33.33% - 20px);
     text-align: center;
+}
+
+.galeria-item h4{
+    margin: 10px 0px;
+    color: coral;
+    font-size: 23px;
+}
+
+.galeria-item img{
+    height: 200px;
+    width: 200px;
+    border-radius: 8px;
+    margin: 5px;
+    transition: transform 0.3s ease;
+}
+
+.galeria-item img:hover{
+    transform: scale(1.45);
 }
